# shiraberu

./: .gitignore  README.md  dictionary_config.py  dictionary_display.py  dictionary_loader.py  main.py  pyproject.toml
dictionary/: config.py  display.py  loader.py  tab_widget.py
